# ros_acoustics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: test_stl.rviz
data/: hollow_t_pipe.stl  simple_pipe_bounded.rcf  t_pipe.stl
launch/: basic_test_launch.py  gazebo_test_launch.py  test1.launch.py  test_rviz_launch.py
ros_acoustics/: acoustics_client.py  acoustics_service.py  file_utils.py  robot.py  room_publisher.py  test_obstacle.py  test_room_to_stl.py  test_stl_to_room.py  waveform_client.py  yaml_test.py
ros_acoustics/test/: test_add_obstacle.py  test_from_bb.py  test_from_rcf.py  test_from_stl.py  test_make_poly.py
ros_acoustics/utils/: pra_utils.py
scripts/: odom_subscriber.py  room_publisher.py  srv_compute_waveforms.py
srv/: ComputeWaveforms.srv
test/: cli_compute_waveforms.py  odom_subscriber.py  test_basic.py  test_plot.py  test_robot.py
test/data/: hollow_t_pipe.dae  hollow_t_pipe_s.stl  hollow_t_pipe_s2.stl  simple_pipe.rcf  t_pipe.stl
utils/: mesh_to_rcf_util.py  rcf_viz.py  sdf_to_rcf_util.py
worlds/: corridor.world  simple_pipe.world  t_pipe.world
